--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,26 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-medialibrary": "^11.13"
     },
     "require-dev": {
+        "barryvdh/laravel-dompdf": "^3.1",
         "fakerphp/faker": "^1.9.1",
+        "intervention/image": "^3.11",
+        "kalnoy/nestedset": "^6.0",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
+        "laravel/scout": "^10.16",
+        "maatwebsite/excel": "^1.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "owen-it/laravel-auditing": "^13.7",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-ignition": "^2.0",
+        "spatie/laravel-permission": "^6.20"
     },
     "autoload": {
         "psr-4": {
