--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,16 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-medialibrary": "^11.13"
+        "spatie/laravel-medialibrary": "*"
     },
     "require-dev": {
         "barryvdh/laravel-dompdf": "^3.1",
         "fakerphp/faker": "^1.9.1",
         "intervention/image": "^3.11",
-        "kalnoy/nestedset": "^6.0",
         "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
