--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^3.1",
         "guzzlehttp/guzzle": "^7.2",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "spatie/laravel-medialibrary": "*"
-    },
-    "require-dev": {
     },
     "autoload": {
         "psr-4": {
