--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
+        "phpoffice/phpspreadsheet": "^4.4",
         "spatie/laravel-medialibrary": "*"
     },
     "autoload": {
