--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
         "phpoffice/phpspreadsheet": "^4.4",
-        "spatie/laravel-medialibrary": "*"
+        "spatie/laravel-medialibrary": "*",
+        "spatie/laravel-permission": "^6.21"
     },
     "autoload": {
         "psr-4": {
